--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
-apply plugin: 'java'
-apply plugin: 'maven'
+plugins {
+    id "java"
+    id "maven"
+    id "idea"
+    id "com.github.dkorotych.gradle-maven-exec" version "1.2.2.1"
+}
 
 group = 'com.br'
-version = '1.0'
+version = '1.1'
 
-description = """log-audit"""
+description = "log-audit"
 
 sourceCompatibility = 8
 targetCompatibility = 8
@@ -16,6 +20,7 @@ tasks.withType(JavaCompile) {
 repositories {
         
     maven { url "http://repo.maven.apache.org/maven2" }
+
     flatDir {
         dirs 'lib'
     }
@@ -28,12 +33,24 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version:'4.12'
 }
 
+task mvn(type: MavenExec) {
+    goals 'clean', 'package'
+}
+
 task jarb(type: Jar) {
+
+
     manifest {
-        attributes 'Main-Class': 'com.br.Main'
+        attributes 'Main-Class': 'com.br.LogFactory'
     }
     baseName = 'log-audit'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
 
+task all{
+    dependsOn 'jarb'
+    dependsOn 'mvn'
+
+    tasks.findByName('jarb').mustRunAfter 'mvn'
+}
