--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.br'
-version = '1.1'
+version = '2.0'
 
 description = "log-audit"
 
@@ -41,7 +41,7 @@ task jarb(type: Jar) {
 
 
     manifest {
-        attributes 'Main-Class': 'com.br.LogFactory'
+        attributes 'Main-Class': 'LogFactory'
     }
     baseName = 'log-audit'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
