--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 }
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
+    compile group: 'org.projectlombok', name: 'lombok', version:'1.16.22'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.9.0'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version:'2.9.2'
     compile group: 'com.oracle', name: 'ojdbc6', version:'11.2.0.4'
