--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,10 @@ plugins {
     id "maven"
     id "idea"
     id "com.github.dkorotych.gradle-maven-exec" version "1.2.2.1"
+     id 'org.ajoberstar.reckon' version '0.8.0'
 }
+
+apply from: 'gradle/build/reckon.gradle'
 
 group = 'com.br'
 version = '2.0.1'
@@ -55,3 +58,4 @@ task all{
 
     tasks.findByName('jarb').mustRunAfter 'mvn'
 }
+
