--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,14 @@ plugins {
     id "java"
     id "maven"
     id "idea"
+    id "com.moowork.node" version "1.2.0"
+    id "com.moowork.gulp" version "1.2.0"
     id "com.github.dkorotych.gradle-maven-exec" version "1.2.2.1"
     id 'com.palantir.git-version' version '0.11.0'
 }
 
 
-
-//apply from: 'gradle/build/...'
+apply from: 'gradle/build/node.gradle'
 
 group = 'com.br'
 version gitVersion()
