--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ repositories {
 }
 dependencies {
     compile group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
-    compile group: 'org.projectlombok', name: 'lombok', version:'1.16.22'
+    
     
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.9.0'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version:'2.9.2'
@@ -44,8 +44,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version:'4.12'
 
     //lombok é um processador de anotações, precisa estar declarado para ser compatível com gradle 5.0
-    annotationProcessor('org.projectlombok:lombok:1.16.22')
-    testAnnotationProcessor('org.projectlombok:lombok:1.16.22')
+    // compile group: 'org.projectlombok', name: 'lombok', version:'1.16.22'
+    // annotationProcessor('org.projectlombok:lombok:1.16.22')
+    // testAnnotationProcessor('org.projectlombok:lombok:1.16.22')
 }
 
 task mvn(type: MavenExec) {
