--- a/build.gradle
+++ b/build.gradle
@@ -78,3 +78,20 @@ task all{
     tasks.findByName('jarb').mustRunAfter 'mvn'
 }
 
+
+task writeNewPom {
+    doLast {
+        pom {
+            project {
+                inceptionYear '2018'
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution 'repo'
+                    }
+                }
+            }
+        }.writeTo("$buildDir/pom.xml")
+    }
+}
