--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id "com.moowork.gulp" version "1.2.0"
     id "com.github.dkorotych.gradle-maven-exec" version "1.2.2.1"
     id 'com.palantir.git-version' version '0.11.0'
+    id 'maven-publish'
+    //id 'maven-publish-auth'
 }
 
 
@@ -13,6 +15,7 @@ apply from: 'gradle/build/node.gradle'
 
 group = 'com.br.log.audit'
 
+//gradlew printVersion
 version gitVersion()
 
 description = "log-audit"
@@ -35,6 +38,9 @@ repositories {
     }
 }
 dependencies {
+    compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.2'
+
+
     compile group: 'org.apache.commons', name: 'commons-io', version:'1.3.2'
     
     
@@ -65,11 +71,8 @@ task jarb(type: Jar) {
     with jar
 }
 
-task publish(type: Copy) {
-    dependsOn jarb
-    from jar.archivePath // shortcut for createJar.outputs.files
-    into "${projectDir}/../lib/log-audit"
-}   
+
+
 
 task all{
     dependsOn 'jarb'
@@ -84,6 +87,12 @@ task writeNewPom {
         pom {
             project {
                 inceptionYear '2018'
+                groupId 'com.br.log.audit'
+                artifactId 'log-audit'
+                name 'log-audit'
+                description 'jar for acessing database with log-audit pattern'
+                url 'http://sistemas.igeprev.pa.gov.br/sisjuri'
+                packaging 'jar'
                 licenses {
                     license {
                         name 'The Apache Software License, Version 2.0'
@@ -91,7 +100,69 @@ task writeNewPom {
                         distribution 'repo'
                     }
                 }
+                properties {
+                    "maven.compiler.source" '1.8'
+                    "maven.compiler.target" '1.8'
+                    "java.version" '1.8'
+                    "project.build.sourceEncoding" 'UTF-8'
+                }
+                modelVersion '4.0.0'
+            }
+        }.withXml {
+            //outros parâmetros do pom. Específicos por aplicação.
+
+
+            asNode().with {
+                appendNode('build').with {
+                    appendNode('plugins').with {
+                        appendNode('plugin').with {
+                            appendNode('groupId', 'org.apache.maven.plugins')
+                            appendNode('artifactId', 'maven-jar-plugin')
+                            appendNode('version', '3.1.0')
+
+                            appendNode('configuration').with {
+                                appendNode('archive').with {
+                                    appendNode('manifest').with {
+                                        appendNode('mainClass', 'com.br.log.audit.LogFactory')
+                                    }
+                                }
+                            }
+                        }
+                        appendNode('plugin').with {
+                            appendNode('groupId', 'org.apache.maven.plugins')
+                            appendNode('artifactId', 'maven-compiler-plugin')
+                            appendNode('version', '3.7.0')
+
+                            appendNode('configuration').with {
+                                appendNode('source', '8')
+                                appendNode('target', '8')
+                            }
+                        }
+                    }
+                }
             }
         }.writeTo("$buildDir/pom.xml")
+                .writeTo("pom.xml")
+    }
+}
+
+
+publishing {
+    repositories {
+        maven {
+            // change to point to your repo, e.g. http://my.org/repo
+            url = "http://10.8.5.59:8081/nexus/content/repositories/techlead"
+            name = 'techlead'
+        }
+    }
+
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.br.log.audit'
+            artifactId = 'log-audit'
+            version = gitVersion()
+
+            from components.java
+        }
     }
 }
